--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: php
 
 php:
-    - 7.0
     - 7.1
     - 7.2
     - nightly
+
+matrix:
+    allow_failures:
+    - php: nightly
 
 script: "./run_specs -f pretty"
