--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "keywords": ["teamcity", "phpspec", "extension", "formatter"],
     "license": "MIT",
     "require": {
-        "php": ">=5.3.0",
-        "phpspec/phpspec": "~3.0"
+        "php": "^7.1, <7.3",
+        "phpspec/phpspec": "~5.0"
     },
     "autoload": {
         "psr-0": {
